--- a/environments/uav_env/docker-compose.yml
+++ b/environments/uav_env/docker-compose.yml
@@ -1,24 +1,27 @@
-version: '3.7'
 services:
-  pip_env:
+  uav_env:
     build:
       context: ../../
-      dockerfile: ./docker/pip_env/Dockerfile
+      dockerfile: ./environments/uav_env/Dockerfile
       args:
         WORKING_DIRECTORY: ${WORKING_DIRECTORY}
     environment:
       - TZ=Asia/Tokyo
-      - PYTHONPATH=/${WORKING_DIRECTORY}:/${WORKING_DIRECTORY}/src
+      - PYTHONPATH=/${WORKING_DIRECTORY}:/${WORKING_DIRECTORY}/gym_uav_env
       - JUPYTER_PORT=${JUPYTER_PORT}
-      - JUPYTER_PASSWORD=${JUPYTER_PASSWORD}
+      - MLFLOW_PORT=${MLFLOW_PORT}
+      - TENSORBOARD_PORT=${TENSORBOARD_PORT}
 
     # Fix slow shutdown of web container
     init: true
     volumes:
       # bind mount
       - ../../:/${WORKING_DIRECTORY}
+    shm_size: '20gb'
     ports:
+      - ${MLFLOW_PORT}:${MLFLOW_PORT}
       - ${JUPYTER_PORT}:${JUPYTER_PORT}
+      - ${TENSORBOARD_PORT}:${TENSORBOARD_PORT}
 
     # INFO: Following two lines are necessary for the backtrace by pdb
     stdin_open: true
@@ -26,6 +29,8 @@ services:
 
     command: >
       bash -c "
+        mlflow ui --host 0.0.0.0 --port ${MLFLOW_PORT} &
+        tensorboard --logdir logs/ --host=0.0.0.0 --port ${TENSORBOARD_PORT} & \
         jupyter notebook --no-browser --ip=0.0.0.0 --port ${JUPYTER_PORT} --allow-root --NotebookApp.token=${JUPYTER_PASSWORD}
       "
     working_dir: "/${WORKING_DIRECTORY}"
